--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -4,6 +4,9 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
         android:layout_width="120dp"
@@ -149,4 +152,7 @@
         android:fontFamily="@font/montserrat"
         android:textSize="20sp" />
 
+    </ScrollView>
+
 </RelativeLayout>
+
