--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,7 +18,7 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="210dp"
             android:scaleType="fitXY"
             android:src="@drawable/ic_wave_1"
             />
@@ -50,7 +50,7 @@
             android:text="Login"
             android:textSize="40sp"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="180dp"
+            android:layout_marginTop="140dp"
             android:textStyle="bold"/>
 
     <TextView
@@ -59,7 +59,7 @@
     android:text="Faça login para continuar"
         android:textSize="20sp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="230dp"/>
+        android:layout_marginTop="195dp"/>
 
     <EditText
         android:id="@+id/edit_text_email"
@@ -69,7 +69,7 @@
         android:hint="Email"
         android:background="@drawable/formato_edit_text"
         android:padding="24dp"
-        android:layout_marginTop="300dp"
+        android:layout_marginTop="240dp"
         android:drawablePadding="16dp"
         android:maxLines="1"
         android:drawableTint="@color/pink"
@@ -84,7 +84,7 @@
         android:hint="Senha"
         android:background="@drawable/formato_edit_text"
         android:padding="24dp"
-        android:layout_marginTop="390dp"
+        android:layout_marginTop="320dp"
         android:drawablePadding="16dp"
         android:maxLines="1"
         android:drawableTint="@color/pink"
@@ -100,14 +100,14 @@
         android:textColor="@color/white"
         android:textSize="18dp"
         android:textStyle="bold"
-        android:layout_marginTop="480dp"
+        android:layout_marginTop="400dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"/>
 
         <CheckBox
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="550dp"
+            android:layout_marginTop="460dp"
             android:layout_marginEnd="10dp"
             android:layout_marginStart="260dp"
             android:text="Lembrar-me"
@@ -118,7 +118,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Esqueci a senha"
-        android:layout_marginTop="580dp"
+        android:layout_marginTop="490dp"
         android:textColor="@color/blue"
         android:textSize="15sp"
         android:layout_marginStart="290dp"
@@ -128,20 +128,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Não tem conta?"
-        android:layout_marginTop="600dp"
+        android:layout_marginTop="510dp"
         android:textSize="15sp"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="140sp"/>
 
 
     <TextView
+        android:id="@+id/tv_criar_conta"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Crie uma conta agora"
         android:textColor="@color/blue"
         android:layout_marginStart="260sp"
         android:textSize="15sp"
-        android:layout_marginTop="600dp"
+        android:layout_marginTop="510dp"
         android:layout_marginEnd="10dp"/>
 
     <ImageView
@@ -154,12 +155,13 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="700dp"
+        android:layout_marginTop="625dp"
         android:gravity="center"
         android:layout_centerHorizontal="true"
         android:textColor="@color/white"
         android:text="Desenvolvido por DS2M-A"
         android:textSize="16sp"/>
+
 
 
 
