--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -62,7 +62,10 @@
         android:layout_marginEnd="20dp"
         android:fontFamily="@font/montserrat"
         android:hint="Senha"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:maxLength="8"
+
+        />
 
     <TextView
         android:layout_width="wrap_content"
@@ -131,6 +134,7 @@
 
 
     <RadioButton
+        android:id="@+id/radio_feminino"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -141,6 +145,7 @@
         android:focusable="false"/>
 
     <RadioButton
+        android:id="@+id/radio_masculino"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="150dp"
