implementando imagem da galeria

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,7 +18,7 @@
     <color name="cyan_700">#008ba3</color>
 
 
-    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimary">#f9a7a7</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorWrite">#FFFFFF</color>
