--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -11,18 +11,20 @@
         app:cardCornerRadius="60dp"
         android:layout_centerHorizontal="true">
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/iv_foto_perfil"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:src="@drawable/user2"
             android:scaleType="centerCrop"/>
 
     </androidx.cardview.widget.CardView>
 
     <TextView
+        android:id="@+id/tv_trocar_foto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="250dp"
+        android:layout_marginStart="270dp"
         android:layout_marginTop="150dp"
         android:fontFamily="@font/montserrat"
         android:text="Trocar Foto"
