--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -62,7 +62,7 @@
         android:layout_marginTop="195dp"/>
 
     <EditText
-        android:id="@+id/edit_text_email"
+        android:id="@+id/edit_login_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawableStart="@drawable/email"
@@ -76,11 +76,13 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"/>
 
+
     <EditText
-        android:id="@+id/edit_text_senha"
+        android:id="@+id/edit_login_senha"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawableStart="@drawable/senhaa"
+        app:passwordToggleEnabled="true"
         android:hint="Senha"
         android:background="@drawable/formato_edit_text"
         android:padding="24dp"
@@ -89,7 +91,8 @@
         android:maxLines="1"
         android:drawableTint="@color/pink"
         android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"/>
+        android:layout_marginEnd="20dp"
+        android:inputType="numberPassword"/>
 
     <Button
         android:id="@+id/button_entrar"
@@ -155,7 +158,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="625dp"
+        android:layout_marginTop="705dp"
         android:gravity="center"
         android:layout_centerHorizontal="true"
         android:textColor="@color/white"
