--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -22,15 +22,17 @@
             app:cardCornerRadius="60dp">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/iv_dash_foto_perfil"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:scaleType="centerCrop"
-                android:src="@drawable/user2" />
+                android:src="@drawable/user" />
 
         </androidx.cardview.widget.CardView>
 
 
         <TextView
+            android:id="@+id/tv_dash_nome"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -40,6 +42,7 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/tv_dash_profissao"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -64,6 +67,7 @@
                 android:layout_marginEnd="30dp">
 
                 <TextView
+                    android:id="@+id/tv_dash_imc"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
@@ -73,6 +77,7 @@
                     android:textSize="22sp" />
 
                 <TextView
+                    android:id="@+id/tv_dash_ncd"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
@@ -83,6 +88,7 @@
                     android:gravity="center"/>
 
                 <TextView
+                    android:id="@+id/tv_dash_idade"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
@@ -92,6 +98,7 @@
                     android:gravity="center"/>
 
                 <TextView
+                    android:id="@+id/tv_dash_peso"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
@@ -102,6 +109,7 @@
                     android:gravity="center"/>
 
                 <TextView
+                    android:id="@+id/tv_dash_altura"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
@@ -121,6 +129,7 @@
 
 
             <TextView
+
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -175,7 +184,7 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:background="@drawable/formato_edit_text"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="20dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp">
         <ImageView
