inserindo informações reais do usuario da dashnoard- idade e ínício do peso

--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -181,6 +181,7 @@
         </LinearLayout>
 
     <RelativeLayout
+        android:id="@+id/pesarAgora"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:background="@drawable/formato_edit_text"
