--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -14,6 +14,7 @@
         android:orientation="vertical">
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/a"
             android:layout_width="120dp"
             android:layout_height="130dp"
             android:layout_gravity="center"
@@ -181,7 +182,7 @@
         </LinearLayout>
 
     <RelativeLayout
-        android:id="@+id/pesarAgora"
+        android:id="@+id/relative_pesar_agora"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:background="@drawable/formato_edit_text"
