--- a/app/src/main/res/layout/activity_pesagem2.xml
+++ b/app/src/main/res/layout/activity_pesagem2.xml
@@ -34,9 +34,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView"
-        app:srcCompat="@drawable/pilates"
-
-        tools:srcCompat="@drawable/pilates_300" />
+        tools:srcCompat="@drawable/balanca_logo" />
 
     <TextView
         android:id="@+id/textView2"
